<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingBottom="5dip"
        android:paddingLeft="30dip"
        android:paddingRight="10dip"
        android:paddingTop="0dip"
        tools:ignore="UselessParent" >

        <TextView
            android:id="@+id/textMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_text"
            android:minWidth="250dip"
            android:paddingBottom="30dip"
            android:paddingLeft="20dip"
            android:paddingRight="20dip"
            android:paddingTop="20dip"
            android:layout_gravity="center_horizontal|center_vertical"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/username_field"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dip"
            android:gravity="left|center_vertical"
            android:hint="@string/enter_username"
            android:inputType="textEmailAddress"
            android:minWidth="250dip"
            android:paddingBottom="2dip"
            android:paddingLeft="10dip"
            android:paddingRight="2dip"
            android:paddingTop="2dip"
            android:scrollHorizontally="true"
            android:singleLine="true" >
        </EditText>

        <EditText
            android:id="@+id/password_field"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dip"
            android:gravity="left|center_vertical"
            android:inputType="textPassword"
            android:hint="@string/enter_password"
            android:minWidth="250dip"
            android:paddingBottom="2dip"
            android:paddingLeft="10dip"
            android:paddingRight="2dip"
            android:paddingTop="2dip"
            android:scrollHorizontally="true"
            android:singleLine="true"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="2dip" >

            <Button
                android:id="@+id/signup_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_weight="1"
                android:minWidth="100dip"
                android:layout_marginRight="4dip"
                android:text="@string/sign_up"
                style="@style/customBtnStyle"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minWidth="100dip"
                android:text="@string/log_in"
                android:textSize="15sp"
                style="@style/customBtnStyle"
                android:textStyle="bold" />
        </LinearLayout>
        <ImageView
            android:id="@+id/details"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:contentDescription="@string/page"
            android:src="@drawable/tut" />
    </LinearLayout>
</LinearLayout>