<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

   <LinearLayout
       android:layout_width="fill_parent"
       android:layout_height="0dip"
       android:layout_weight="1"
       android:orientation="vertical"
       android:paddingBottom="13dip"
       android:paddingLeft="10dip"
       android:paddingRight="10dip"
       android:paddingTop="50dip"
       tools:ignore="UselessParent" >

       <TextView
           android:id="@+id/createObject_textView"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:gravity="center_horizontal|center_vertical"
           android:layout_marginBottom="50dip"
           android:text="@string/attach_file_txt"
           android:textAppearance="?android:attr/textAppearanceMedium" />

       <Button
           android:id="@+id/attach_file_button"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:gravity="center_horizontal|center_vertical"
           android:text="@string/attach_file"
           style="@style/customBtnStyle"
           android:textSize="15sp"
           android:textStyle="bold" />

       <ImageView
            android:id="@+id/details"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:contentDescription="@string/page"
            android:src="@drawable/tut" />
   </LinearLayout>
</LinearLayout>