<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

   <LinearLayout
       android:layout_width="fill_parent"
       android:layout_height="0dip"
       android:layout_weight="1"
       android:orientation="vertical"
       android:paddingBottom="13dip"
       android:paddingLeft="30dip"
       android:paddingRight="30dip"
       android:paddingTop="50dip"
       tools:ignore="UselessParent" >

       <TextView
           android:id="@+id/createObject_textView"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:gravity="center_horizontal|center_vertical"
           android:paddingBottom="20dip"
           android:text="@string/attach_file_txt"
           android:textAppearance="?android:attr/textAppearanceSmall" />

       <Button
           android:id="@+id/signup_button"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:gravity="center_horizontal|center_vertical"
           android:onClick="onAttachFileButtonClicked"
           android:text="@string/attach_file"
           android:textSize="15sp"
           android:textStyle="bold" />

       <TextView
            android:id="@+id/attach_desc_textView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dip"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/attach_body_description" />
   </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        android:paddingBottom="2dip"
        android:paddingLeft="30dip"
        android:paddingRight="30dip"
        android:paddingTop="2dip" >

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:indeterminate="true"
            android:max="100"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/page"
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginBottom="10dip"
            android:layout_marginTop="10dip"
            android:layout_weight="1"
            android:contentDescription="@string/page"
            android:src="@drawable/page3" />
    </LinearLayout>

</LinearLayout>