<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingBottom="13dip"
        android:paddingLeft="30dip"
        android:paddingRight="30dip"
        android:paddingTop="50dip"
        tools:ignore="UselessParent" >

        <EditText
            android:id="@+id/username_field"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dip"
            android:gravity="left|center_vertical"
            android:hint="@string/enter_username"
            android:inputType="textEmailAddress"
            android:minWidth="250dip"
            android:paddingBottom="2dip"
            android:paddingLeft="10dip"
            android:paddingRight="2dip"
            android:paddingTop="2dip"
            android:scrollHorizontally="true"
            android:singleLine="true" >
        </EditText>

        <EditText
            android:id="@+id/password_field"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dip"
            android:gravity="left|center_vertical"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:minWidth="250dip"
            android:paddingBottom="2dip"
            android:paddingLeft="10dip"
            android:paddingRight="2dip"
            android:paddingTop="2dip"
            android:scrollHorizontally="true"
            android:singleLine="true" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:minHeight="24dip"
            android:orientation="horizontal"
            android:paddingTop="2dip" >

            <Button
                android:id="@+id/signup_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="4dip"
                android:layout_weight="1"
                android:onClick="onSignupButtonClicked"
                android:minWidth="100dip"
                android:padding="2dip"
                android:text="@string/sign_up"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dip"
                android:layout_weight="1"
                android:onClick="onLoginButtonClicked"
                android:minWidth="100dip"
                android:padding="2dip"
                android:text="@string/log_in"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical"
            android:paddingTop="2dip"
            android:paddingBottom="2dip">
            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleLarge"
                android:gravity="center_vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:indeterminate="true" />
            <ImageView
                android:id="@+id/page"
                android:layout_width="fill_parent"
                android:layout_height="0dip"
                android:gravity="center_vertical"
                android:layout_weight="1"
                android:src="@drawable/page1" 
                android:contentDescription="@string/page"/>
    </LinearLayout>
</LinearLayout>